test/samples/valid/precedens.ygl
node Start {
    out {
        int a = 2;
        int b = 3;
        int c = 4;

    }
}

node Pre {
    in {
        int a;
        int b;
        int c;
    }

    out {
        int x;
    }

    process {
        out.x = (in.a + in.b) * ((in.c - in.a) * in.b);
    }
}

node Result : Print;

Start.out.a -> Pre.in.a;
Start.out.b -> Pre.in.b;
Start.out.c -> Pre.in.c;

Pre.out.x -> Result.in.text;
expect:30